fix dark mode color

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -2,7 +2,7 @@
 * {
   box-sizing: border-box;
   scrollbar-width: thin;
-  overflow-x: hidden;
+  // @extend .hide-scrollbar;
 }
 
 html {
