--- a/client/src/components/header/Nav.module.scss
+++ b/client/src/components/header/Nav.module.scss
@@ -5,6 +5,7 @@
 }
 
 .header {
+  @extend .hide-scrollbar;
   padding: 10px 25px;
   display: flex;
   width: 100%;
@@ -43,11 +44,12 @@
   @include button();
 }
 
+.loginWhite {
+  @include button(auto, white);
+}
+
 .avatar {
   transition: all 500ms ease;
-  &:hover {
-    transform: scale(1.05);
-  }
 }
 
 @media (max-width: 700px) {
